--- a/cassandra-base/Dockerfile
+++ b/cassandra-base/Dockerfile
@@ -1,8 +1,8 @@
-# Spotify Cassandra 2.0 Base Image
+# Spotify Cassandra 2.1.8 Base Image
 #
 # VERSION               0.1
 #
-# Installs Cassandra 2.0 package. Does only basic configuration.
+# Installs Cassandra 2.1.8 package. Does only basic configuration.
 # Tokens and seed nodes should be configured by child images.
 
 FROM dockerfile/java:oracle-java7
@@ -10,16 +10,15 @@ FROM dockerfile/java:oracle-java7
 ENV DEBIAN_FRONTEND noninteractive
 
 # Add DataStax sources
-ADD datastax_key /tmp/datastax_key
-RUN apt-key add /tmp/datastax_key
-RUN echo "deb http://debian.datastax.com/community stable main" > /etc/apt/sources.list.d/datastax.list
+RUN curl -L http://debian.datastax.com/debian/repo_key | sudo apt-key add -
+RUN echo "deb http://debian.datastax.com/community stable main" | tee -a /etc/apt/sources.list.d/cassandra.sources.list
 
 # Workaround for https://github.com/docker/docker/issues/6345
 RUN ln -s -f /bin/true /usr/bin/chfn
 
-# Install Cassandra 2.0.10
+# Install Cassandra 2.1.8
 RUN apt-get update && \
-    apt-get install -y cassandra=2.0.10 dsc20=2.0.10-1 && \
+    apt-get install -y --force-yes cassandra=2.1.8 dsc21=2.1.8-1 && \
     rm -rf /var/lib/apt/lists/*
 
 ENV CASSANDRA_CONFIG /etc/cassandra
